finished data distribution part